# vinted-accounting-tool

./: .env.example  .gitignore  README.md  Vinted Stock - Übersicht.csv  app.py  pyproject.toml  ui.py  utils.py
.streamlit/: config.toml
data/: config.csv  items.csv  orders.csv  overhead.csv
views/: add_item.py  add_order.py  finance.py  insights.py  lookup.py  warehouse.py
