[project]
name = "vinted-accounting-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "streamlit-authenticator>=0.4.2",
]
