[project]
name = "vinted-accounting-tool"
version = "0.1.0"
description = "Personal Streamlit dashboard for tracking Vinted resale inventory, finances, and analytics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "streamlit>=1.56.0",
    "streamlit-extras>=1.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["utils", "ui", "views"]
